Using Realsense images. Debug mode: print clouds preA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 project(BA_Learn)
 
 set(CMAKE_MACOSX_RPATH 1) # This is needed in macOS
-set( CMAKE_BUILD_TYPE Release )
+#set( CMAKE_BUILD_TYPE Release )
 
 
 IF (!APPLE)
